2013-06-17  Seb Viret  <viret@in2p3.fr>
 
       	* Adding the Stub extractor class in order to 
	retrieve the official stub info

	This version has been tested against CMSSW_6_1_2_SLHC4

2013-05-28  Seb Viret  <viret@in2p3.fr>
 
       	* Added sector efficiency calculator 
	  to the SectorMaker

	This version has been tested against CMSSW_6_1_2_SLHC2

2013-05-24  Seb Viret  <viret@in2p3.fr>
 
       	* Added a the MakeRatesGraphs.C macro in 
          the /test/ directory

2013-05-23  Seb Viret  <viret@in2p3.fr>
 
       	* Added a first version of the trigger sector builder in
          the /test/ directory

2013-04-19  Seb Viret  <viret@in2p3.fr>
 
       	* Added helper macros in Test directory

       	* Code improvement in L1TrackTriggerAnalysis.cc


2013-04-19  Seb Viret  <viret@in2p3.fr>
 
       	* Bugfix in L1TrackTriggerAnalysis.cc


2013-04-12  Seb Viret  <viret@in2p3.fr>
 
       	* First import of the RecoExtractor package in the HL_LHC.

	* Documentation on this package might be fouund on the following page:
	
	  http://sviret.web.cern.ch/sviret/Welcome.php?n=CMS.HLLHCTuto

  	  Look at STEP III

	This version has been tested against CMSSW_6_1_2_SLHC1