@@ -1,3 +1,9 @@
+2013-07-19  Seb Viret  <viret@in2p3.fr>
+ 
+       	* Adding a new pT threshold option
+
+	This version has been tested against CMSSW_6_1_2_SLHC6_patch1
+
 2013-06-17  Seb Viret  <viret@in2p3.fr>
  
        	* Adding the Stub extractor class in order to 
